--- a/index.html
+++ b/index.html
@@ -7,7 +7,22 @@
     <title>DEV Server</title>
   </head>
   <body>
-    
+    <header class="header w-screen h-auto">
+      <nav class="header__menu flex self-center w-9/12 h-12 bg-fuchsia-300 ml-auto mr-auto">
+        <div class="header__menu-logo">
+          <img src="/logo.svg" alt="Couply">
+        </div>
+        <div class="header__menu-items">
+          <ul>
+            <li class="header__link"><a href="#">Home</a></li>
+            <li class="header__link"><a href="#">Cupons</a></li>
+            <li class="header__link"><a href="#">FAQ</a></li>
+            <li class="header__link"><a href="#">Contact</a></li>
+            <li class="header__link btn"><a href="#">Start Saving</a></li>
+          </ul>
+        </div>
+      </nav>
+    </header>
 
 
     <script type="module" src="./src/main.js"></script>
