created: utils.css; modified: navbar, linked utiles.css;

--- a/index.html
+++ b/index.html
@@ -7,23 +7,26 @@
     <title>DEV Server</title>
   </head>
   <body>
-    <header class="header w-screen h-auto">
-      <nav class="header__menu flex self-center h-16 bg-blue-500 ml-auto mr-auto px-8 justify-between items-center">
+    <header class="header">
+      <nav class="header__menu">
         <div class="header__menu-logo">
-          <img src="/logo.svg" alt="Couply">
+          <img src="/logo.svg" alt="Couply" />
         </div>
         <div class="header__menu-items">
-          <ul class="flex gap-3 items-center uppercase text-base text-white font-base">
+          <ul>
             <li class="header__link font-bold"><a href="#">Home</a></li>
             <li class="header__link"><a href="#">Cupons</a></li>
             <li class="header__link"><a href="#">FAQ</a></li>
             <li class="header__link"><a href="#">Contact</a></li>
+          </ul>
+        </div>
+        <div class="header__menu-btn">
+          <ul>
             <li class="header__link btn"><a href="#">Start Saving</a></li>
           </ul>
         </div>
       </nav>
     </header>
-
 
     <script type="module" src="./src/main.js"></script>
   </body>
