--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>DEV Server</title>
   </head>
   <body>
-    <header class="header">
+    <header class="header container">
       <nav class="header__menu">
         <div class="header__menu-logo">
           <img src="/logo.svg" alt="Couply" />
@@ -22,7 +22,7 @@
         </div>
         <div class="header__menu-btn">
           <ul>
-            <li class="header__link btn"><a href="#">Start Saving</a></li>
+            <li class="btn"><a href="#">Start Saving</a></li>
           </ul>
         </div>
       </nav>
