--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </div>
         <div class="header__menu-items">
           <ul>
-            <li class="header__link font-bold"><a href="#">Home</a></li>
+            <li class="header__link header__link-active"><a href="#">Home</a></li>
             <li class="header__link"><a href="#">Cupons</a></li>
             <li class="header__link"><a href="#">FAQ</a></li>
             <li class="header__link"><a href="#">Contact</a></li>
