--- a/index.html
+++ b/index.html
@@ -8,24 +8,20 @@
   </head>
   <body>
     <header class="header container">
+      <div class="header__logo">
+        <img src="/logo.svg" alt="Couply" />
+      </div>
       <nav class="header__menu">
-        <div class="header__menu-logo">
-          <img src="/logo.svg" alt="Couply" />
-        </div>
-        <div class="header__menu-items">
-          <ul>
-            <li class="header__link header__link-active"><a href="#">Home</a></li>
-            <li class="header__link"><a href="#">Cupons</a></li>
-            <li class="header__link"><a href="#">FAQ</a></li>
-            <li class="header__link"><a href="#">Contact</a></li>
-          </ul>
-        </div>
-        <div class="header__menu-btn">
-          <ul>
-            <li class="btn"><a href="#">Start Saving</a></li>
-          </ul>
-        </div>
+        <ul>
+          <li class="header__menu-link link-active"><a href="#">Home</a></li>
+          <li class="header__menu-link"><a href="#">Cupons</a></li>
+          <li class="header__menu-link"><a href="#">FAQ</a></li>
+          <li class="header__menu-link"><a href="#">Contact</a></li>
+        </ul>
       </nav>
+      <div class="header__btn">
+        <a class="btn" href="#">Start Saving</a>
+      </div>
     </header>
 
     <script type="module" src="./src/main.js"></script>
