renamed header classes

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
       </div>
       <nav class="header__menu">
         <ul>
-          <li class="header__menu-link link-active"><a href="#">Home</a></li>
-          <li class="header__menu-link"><a href="#">Cupons</a></li>
-          <li class="header__menu-link"><a href="#">FAQ</a></li>
-          <li class="header__menu-link"><a href="#">Contact</a></li>
+          <li class="header__menu--link link-active"><a href="#">Home</a></li>
+          <li class="header__menu--link"><a href="#">Cupons</a></li>
+          <li class="header__menu--link"><a href="#">FAQ</a></li>
+          <li class="header__menu--link"><a href="#">Contact</a></li>
         </ul>
       </nav>
       <div class="header__btn">
