aaded hero section's skeleton

--- a/index.html
+++ b/index.html
@@ -23,6 +23,57 @@
         <a class="btn" href="#">Start Saving</a>
       </div>
     </header>
+    <section class="hero container">
+      <article class="hero-left">
+        <section class="hero-left__heading">
+          <h1>
+            Shoping with <span>Coupons</span>,<br />
+            applied automatically.
+            <div class="sparks"></div>
+          </h1>
+        </section>
+        <section class="hero-left__testmonial">
+          <div class="bottom-card-1">
+            <span id="used-by">Used by over 5,00,000</span>
+            <div class="card-avater">
+              <img src="#" alt="#" />
+              <img src="#" alt="#" />
+              <img src="#" alt="#" />
+              <img src="#" alt="#" />
+              <img src="#" alt="#" />
+            </div>
+          </div>
+          <div class="bottom-card-2">
+            <img class="bc-avater" src="#" alt="#" />
+            <div class="bc-2-text">
+              <h3>Wow, I saved $480</h3>
+              <span>Danis Rechie</span>
+            </div>
+          </div>
+        </section>
+      </article>
+      <article class="hero-right">
+        <div class="hero-right__card">
+          <span class="number">01</span>
+          <h4>
+            Download the Extension for <br />
+            Chrome or Firefox or Microsoft Edge.
+          </h4>
+        </div>
+        <div class="hero-right__card">
+          <span class="number">02</span>
+          <h4>Visit your favorite retailers.</h4>
+        </div>
+        <div class="hero-right__card">
+          <span class="number">03</span>
+          <h4>Save! Apply coupon from the toolbar.</h4>
+        </div>
+        <div class="hero-right__btn btn">
+          <a href="#">Download Extension</a>
+          <img src="downArrow.svg" alt="#" />
+        </div>
+      </article>
+    </section>
 
     <script type="module" src="./src/main.js"></script>
   </body>
