hero.css initialized

--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
     </header>
     <section class="hero container">
       <article class="hero-left">
-        <section class="hero-left__heading">
+        <div class="hero-left__heading">
           <h1>
             Shoping with <span>Coupons</span>,<br />
             applied automatically.
             <div class="sparks"></div>
           </h1>
-        </section>
-        <section class="hero-left__testmonial">
-          <div class="bottom-card-1">
+        </div>
+        <div class="hero-left__testmonial">
+          <div class="">
             <span id="used-by">Used by over 5,00,000</span>
             <div class="card-avater">
               <img src="#" alt="#" />
@@ -43,14 +43,14 @@
               <img src="#" alt="#" />
             </div>
           </div>
-          <div class="bottom-card-2">
-            <img class="bc-avater" src="#" alt="#" />
-            <div class="bc-2-text">
+          <div class="">
+            <img class="" src="#" alt="#" />
+            <div class="">
               <h3>Wow, I saved $480</h3>
               <span>Danis Rechie</span>
             </div>
           </div>
-        </section>
+        </div>
       </article>
       <article class="hero-right">
         <div class="hero-right__card">
