--- a/index.html
+++ b/index.html
@@ -1,31 +1,56 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="scroll-smooth" lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DEV Server</title>
   </head>
-  <body>
+  <body class="w-screen bg-blue-500/10">
     <header
-      class="section sticky top-0 z-40 ml-auto mr-auto mt-0 flex h-20 items-center justify-between self-center border-b-4 border-blue-600 bg-blue-500/10 backdrop-blur-lg transition-colors duration-300"
+      class="sticky top-0 z-40 border-b border-blue-600 bg-blue-500/10 backdrop-blur-lg transition-colors duration-300"
     >
-      <img class="h-9" src="/logo.svg" alt="Couply" />
-      <nav>
-        <ul
-          class="flex items-center gap-5 text-sm font-medium uppercase text-white transition-colors duration-300 hover:text-yellow-300"
-        >
-          <li class="font-bold"><a href="#">Home</a></li>
-          <li><a href="#">Cupons</a></li>
-          <li><a href="#">FAQ</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-      </nav>
-      <div class="header__btn">
-        <a class="btn" href="#">Start Saving</a>
+      <div
+        class="section self-cente ml-auto mr-auto mt-0 flex h-20 items-center justify-between"
+      >
+        <!-- <img class="h-10" src="/logo.svg" alt="Couply" /> -->
+        <div>
+          <svg
+            class="h-10"
+            width="53"
+            height="68"
+            viewBox="0 0 53 68"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M28.8179 62.0521L0 33.1238V39.0335C0 40.5998 0.618161 42.1066 1.73674 43.2L24.6676 66.2182C26.9636 68.523 30.7022 68.523 32.9982 66.2182L51.278 47.8687C53.574 45.5639 53.574 41.8111 51.278 39.5063L28.8179 62.0521Z"
+              fill="#ffc82c"
+            />
+            <path
+              d="M24.6676 51.4439C26.9636 53.7487 30.7022 53.7487 32.9982 51.4439L51.278 33.0944C53.574 30.7896 53.574 27.0371 51.278 24.7323L28.3473 1.71382C27.2291 0.618461 25.7297 0.00368091 24.1672 0H5.88725C2.64926 0 0 2.65937 0 5.90972V24.2596C0 25.8255 0.618161 27.3326 1.73674 28.4257L24.6676 51.4439ZM12.5104 8.86458C13.4863 8.86458 14.4222 9.25371 15.1122 9.94639C15.8023 10.6391 16.1899 11.5786 16.1899 12.5582C16.1899 13.5376 15.8023 14.4771 15.1122 15.1697C14.4222 15.8627 13.4863 16.2517 12.5104 16.2517C11.5345 16.2517 10.5986 15.8627 9.90858 15.1697C9.21853 14.4771 8.83088 13.5376 8.83088 12.5582C8.83088 11.5786 9.21853 10.6391 9.90858 9.94639C10.5986 9.25371 11.5345 8.86458 12.5104 8.86458Z"
+              fill="#1e40af"
+            />
+          </svg>
+        </div>
+        <nav>
+          <ul
+            class="duration-30 flex items-center gap-5 text-base font-medium uppercase tracking-wider text-blue-800 transition-colors lg:gap-8"
+          >
+            <li class="font-bold hover:text-yellow-500">
+              <a href="#">Home</a>
+            </li>
+            <li class="hover:text-yellow-500"><a href="#">Cupons</a></li>
+            <li class="hover:text-yellow-500"><a href="#">FAQ</a></li>
+            <li class="hover:text-yellow-500"><a href="#">Contact</a></li>
+          </ul>
+        </nav>
+        <div class="header__btn">
+          <a class="btn" href="#">Start Saving</a>
+        </div>
       </div>
     </header>
-    <section class="section h-[2000px] bg-red-500">
+    <section class="section h-[2000px] bg-blue-500/10 text-yellow-500">
       <article class="hero-left">
         <div class="hero-left__heading">
           <h1>
