replaced: "section" class by tw-default container class [dulpicated removed]

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DEV Server</title>
   </head>
-  <body class="w-screen bg-blue-500/10">
+  <body class="w-screen bg-yellow-500/10">
     <header
-      class="sticky top-0 z-40 border-b border-blue-600 bg-blue-500/10 backdrop-blur-lg transition-colors duration-300"
+      class="sticky top-0 z-40 border-b border-blue-600 bg-slate-500/10 backdrop-blur-lg transition-colors duration-300"
     >
       <div
-        class="section self-cente ml-auto mr-auto mt-0 flex h-20 items-center justify-between"
+        class="container mx-auto flex h-20 items-center justify-between self-center px-8"
       >
         <!-- <img class="h-10" src="/logo.svg" alt="Couply" /> -->
         <div>
@@ -50,7 +50,7 @@
         </div>
       </div>
     </header>
-    <section class="section h-[2000px] bg-blue-500/10 text-yellow-500">
+    <section class="container h-[2000px] bg-blue-500/10 text-yellow-500">
       <article class="hero-left">
         <div class="hero-left__heading">
           <h1>
