replaced: using <div> element instead of <section>

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       </div>
     </header>
     <!-- hero section begins -->
-    <section
+    <div
       class="container mx-auto h-[2000px] bg-blue-500/10 px-8 text-yellow-500"
     >
       <article class="hero-left">
@@ -103,7 +103,7 @@
           <img src="downArrow.svg" alt="#" />
         </div>
       </article>
-    </section>
+    </div>
     <!-- hero section ends -->
 
     <script type="module" src="./src/main.js"></script>
