modified:   index.html

--- a/index.html
+++ b/index.html
@@ -51,58 +51,58 @@
       </div>
     </header>
     <!-- hero section begins -->
-    <div
-      class="container mx-auto h-[2000px] bg-blue-500/10 px-8 text-yellow-500"
-    >
-      <article class="hero-left">
-        <div class="hero-left__heading">
-          <h1>
-            Shoping with <span>Coupons</span>,<br />
-            applied automatically.
-            <div class="sparks"></div>
-          </h1>
-        </div>
-        <div class="hero-left__testmonial">
-          <div class="">
-            <span id="used-by">Used by over 5,00,000</span>
-            <div class="card-avater">
-              <img src="#" alt="#" />
-              <img src="#" alt="#" />
-              <img src="#" alt="#" />
-              <img src="#" alt="#" />
-              <img src="#" alt="#" />
-            </div>
+    <div class="h-[2000px] bg-blue-500/10 text-yellow-500">
+      <div class="container mx-auto border border-yellow-600 px-8">
+        <article class="hero-left">
+          <div class="hero-left__heading">
+            <h1>
+              Shoping with <span>Coupons</span>,<br />
+              applied automatically.
+              <div class="sparks"></div>
+            </h1>
           </div>
-          <div class="">
-            <img class="" src="#" alt="#" />
+          <div class="hero-left__testmonial">
             <div class="">
-              <h3>Wow, I saved $480</h3>
-              <span>Danis Rechie</span>
+              <span id="used-by">Used by over 5,00,000</span>
+              <div class="card-avater">
+                <img src="#" alt="#" />
+                <img src="#" alt="#" />
+                <img src="#" alt="#" />
+                <img src="#" alt="#" />
+                <img src="#" alt="#" />
+              </div>
+            </div>
+            <div class="">
+              <img class="" src="#" alt="#" />
+              <div class="">
+                <h3>Wow, I saved $480</h3>
+                <span>Danis Rechie</span>
+              </div>
             </div>
           </div>
-        </div>
-      </article>
-      <article class="hero-right">
-        <div class="hero-right__card">
-          <span class="number">01</span>
-          <h4>
-            Download the Extension for <br />
-            Chrome or Firefox or Microsoft Edge.
-          </h4>
-        </div>
-        <div class="hero-right__card">
-          <span class="number">02</span>
-          <h4>Visit your favorite retailers.</h4>
-        </div>
-        <div class="hero-right__card">
-          <span class="number">03</span>
-          <h4>Save! Apply coupon from the toolbar.</h4>
-        </div>
-        <div class="hero-right__btn btn">
-          <a href="#">Download Extension</a>
-          <img src="downArrow.svg" alt="#" />
-        </div>
-      </article>
+        </article>
+        <article class="hero-right">
+          <div class="hero-right__card">
+            <span class="number">01</span>
+            <h4>
+              Download the Extension for <br />
+              Chrome or Firefox or Microsoft Edge.
+            </h4>
+          </div>
+          <div class="hero-right__card">
+            <span class="number">02</span>
+            <h4>Visit your favorite retailers.</h4>
+          </div>
+          <div class="hero-right__card">
+            <span class="number">03</span>
+            <h4>Save! Apply coupon from the toolbar.</h4>
+          </div>
+          <div class="hero-right__btn btn">
+            <a href="#">Download Extension</a>
+            <img src="downArrow.svg" alt="#" />
+          </div>
+        </article>
+      </div>
     </div>
     <!-- hero section ends -->
 
