replaced: <div> to <section>

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </header>
     <!-- hero section begins -->
     <main class="h-[2000px] bg-blue-500/10 text-yellow-500">
-      <div class="container mx-auto h-full px-8 xl:max-w-screen-xl">
+      <section class="container mx-auto h-full px-8 xl:max-w-screen-xl">
         <article class="hero-left">
           <div class="hero-left__heading">
             <h1>
@@ -116,7 +116,7 @@
             <img src="downArrow.svg" alt="#" />
           </div>
         </article>
-      </div>
+      </section>
     </main>
     <!-- hero section ends -->
     <footer class="flex h-40 items-center justify-center bg-yellow-300/10">
