--- a/index.html
+++ b/index.html
@@ -66,8 +66,12 @@
     </header>
     <!-- hero section begins -->
     <main class="h-[2000px] bg-blue-500/10 text-blue-800">
-      <section class="container border-b border-blue-600 mx-auto flex px-8 xl:max-w-7xl pb-24">
-        <article class="flex-shrink-0 basis-3/5 border-r border-r-blue-600 border-dotted">
+      <section
+        class="container mx-auto flex border-b border-dotted border-blue-600 px-8 pb-24 xl:max-w-7xl"
+      >
+        <article
+          class="flex-shrink-0 basis-3/5 border-r border-dotted border-r-blue-600"
+        >
           <div>
             <h1
               class="mt-24 text-6xl font-semibold tracking-tighter text-blue-800"
@@ -84,12 +88,12 @@
               <span class="text-blue-800/30">applied automatically</span>
             </h1>
           </div>
-          <div class="flex items-center gap-14 mt-24">
+          <div class="mt-24 flex items-center gap-14">
             <div class="flex flex-col gap-3">
               <span class="text-base font-semibold tracking-widest"
                 >Used by over 5,00,000</span
               >
-              <div class="flex -space-x-4 -ml-1 -mb-1">
+              <div class="-mb-1 -ml-1 flex -space-x-4">
                 <img class="avater-stacked" src="avater-1.jpg" alt="avater" />
                 <img class="avater-stacked" src="avater-2.jpg" alt="avater" />
                 <img class="avater-stacked" src="avater-3.jpg" alt="avater" />
@@ -104,10 +108,10 @@
               </div>
             </div>
             <div
-              class="mt-6 flex w-fit items-center gap-3 rounded-full bg-yellow-400/20 py-1 pl-1 pr-3 ring ring-offset-2 ring-blue-800/30"
+              class="mt-6 flex w-fit items-center gap-3 rounded-full bg-yellow-400/20 py-1 pl-1 pr-3 ring ring-blue-800/30 ring-offset-2"
             >
               <img
-                class="w-16 rounded-full ring filter saturate-200 brightness-90"
+                class="w-16 rounded-full ring brightness-90 saturate-200 filter"
                 src="avater-default.png"
                 alt="#"
               />
@@ -115,8 +119,7 @@
                 <h3 class="text-xl font-semibold leading-6">
                   Wow, I saved $480!
                 </h3>
-                <span
-                  class="text-sm uppercase leading-6 tracking-widest"
+                <span class="text-sm uppercase leading-6 tracking-widest"
                   >Danis Rechie</span
                 >
               </div>
