--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <ul
             class="duration-30 flex items-center gap-5 text-base font-medium uppercase tracking-wider text-blue-800 transition-colors lg:gap-8"
           >
-            <li class="font-bold hover:text-yellow-500">
+            <li class="font-bold text-yellow-500 hover:text-yellow-500">
               <a href="#">Home</a>
             </li>
             <li class="hover:text-yellow-500"><a href="#">Cupons</a></li>
