--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <!-- hero section begins -->
     <main class="h-[2000px] bg-blue-500/10 text-blue-800">
       <section
-        class="container mx-auto flex border-b border-dotted border-blue-600 px-8 pb-24 xl:max-w-7xl"
+        class="container mx-auto flex border-b border-dotted border-blue-600 px-8 xl:max-w-7xl"
       >
         <article
           class="flex-shrink-0 basis-3/5 border-r border-dotted border-r-blue-600"
@@ -88,7 +88,7 @@
               <span class="text-blue-800/30">applied automatically</span>
             </h1>
           </div>
-          <div class="mt-24 flex items-center gap-14">
+          <div class="mb-24 mt-24 flex items-center gap-14">
             <div class="flex flex-col gap-3">
               <span class="text-base font-semibold tracking-widest"
                 >Used by over 5,00,000</span
@@ -126,7 +126,7 @@
             </div>
           </div>
         </article>
-        <article class="flex-shrink-0 basis-2/5">
+        <article class="mt-24 flex-shrink-0 basis-2/5">
           <div class="hero-right__card">
             <span class="number">01</span>
             <h4>
