--- a/index.html
+++ b/index.html
@@ -126,25 +126,45 @@
             </div>
           </div>
         </article>
-        <article class="mt-24 flex-shrink-0 basis-2/5">
-          <div class="hero-right__card">
-            <span class="number">01</span>
-            <h4>
-              Download the Extension for <br />
-              Chrome or Firefox or Microsoft Edge.
-            </h4>
+        <article
+          class="mb-24 mt-24 flex flex-shrink-0 basis-2/5 flex-col justify-between"
+        >
+          <div class="flex w-fit flex-col gap-8 self-end text-xl font-light">
+            <div class="flex items-center gap-4">
+              <span class="counter">01</span>
+              <h4>
+                Download the Extension for <br />
+                Chrome or Firefox or Microsoft Edge.
+              </h4>
+            </div>
+            <div class="flex items-center gap-4">
+              <span class="counter">02</span>
+              <h4>Visit your favorite retailers.</h4>
+            </div>
+            <div class="flex items-center gap-4">
+              <span class="counter">03</span>
+              <h4>Save! Apply coupon from the toolbar.</h4>
+            </div>
           </div>
-          <div class="hero-right__card">
-            <span class="number">02</span>
-            <h4>Visit your favorite retailers.</h4>
-          </div>
-          <div class="hero-right__card">
-            <span class="number">03</span>
-            <h4>Save! Apply coupon from the toolbar.</h4>
-          </div>
-          <div class="hero-right__btn btn">
+          <div
+            class="btn-primary ml-[125px] flex w-fit flex-row-reverse items-end justify-center gap-1 pb-3 pr-6"
+          >
             <a href="#">Download Extension</a>
-            <img src="downArrow.svg" alt="#" />
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 24 24"
+              fill="currentColor"
+              class="h-8 w-8"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M9.75 6.75h-3a3 3 0 00-3 3v7.5a3 3 0 003 3h7.5a3 3 0 003-3v-7.5a3 3 0 00-3-3h-3V1.5a.75.75 0 00-1.5 0v5.25zm0 0h1.5v5.69l1.72-1.72a.75.75 0 111.06 1.06l-3 3a.75.75 0 01-1.06 0l-3-3a.75.75 0 111.06-1.06l1.72 1.72V6.75z"
+                clip-rule="evenodd"
+              />
+              <path
+                d="M7.151 21.75a2.999 2.999 0 002.599 1.5h7.5a3 3 0 003-3v-7.5c0-1.11-.603-2.08-1.5-2.599v7.099a4.5 4.5 0 01-4.5 4.5H7.151z"
+              />
+            </svg>
           </div>
         </article>
       </section>
@@ -153,7 +173,7 @@
     <footer class="flex h-40 items-center justify-center bg-yellow-300/10">
       <div class="container px-8 xl:max-w-7xl">
         <a
-          class="btn-alternative flex items-center justify-center gap-2 text-xl leading-6"
+          class="btn-footer flex items-center justify-center gap-2 text-xl leading-6"
           target="_blank"
           href="https://github.com/saeidex/Couply-rebuilding-with-tailwindcss"
         >
