fixed: btn text

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             </div>
           </div>
           <div
-            class="btn-primary ml-[125px] flex w-fit flex-row-reverse items-end justify-center gap-1 pb-3 pr-6"
+            class="btn-primary ml-[125px] flex w-fit flex-row-reverse items-end justify-center gap-1 pb-3 pr-6 text-lg tracking-widest"
           >
             <a href="#">Download Extension</a>
             <svg
