stylized: btn-width-fit-to-full, border-dotted-to-dash.

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   </head>
   <body class="w-full bg-yellow-500/10">
     <header
-      class="sticky top-0 z-40 border-b border-blue-600 bg-slate-500/10 backdrop-blur-lg transition-colors duration-300"
+      class="sticky top-0 z-40 bg-slate-500/10 backdrop-blur-lg transition-colors duration-300"
     >
       <div
-        class="container mx-auto flex h-20 items-center justify-between self-center px-8 xl:max-w-7xl"
+        class="container border-b border-dashed border-blue-600  mx-auto flex h-20 items-center justify-between self-center px-8 xl:max-w-7xl"
       >
         <!-- <img class="h-10" src="/logo.svg" alt="Couply" /> -->
         <div>
@@ -67,10 +67,10 @@
     <!-- hero section begins -->
     <main class="h-[2000px] bg-blue-500/10 text-blue-800">
       <section
-        class="container mx-auto flex border-b border-dotted border-blue-600 px-8 xl:max-w-7xl"
+        class="container mx-auto flex border-b border-dashed border-blue-600 px-8 xl:max-w-7xl"
       >
         <article
-          class="flex-shrink-0 basis-3/5 border-r border-dotted border-r-blue-600"
+          class="flex-shrink-0 basis-3/5 border-r border-dashed border-r-blue-600"
         >
           <div>
             <h1
@@ -147,7 +147,7 @@
             </div>
           </div>
           <div
-            class="btn-primary ml-[125px] flex w-fit flex-row-reverse items-end justify-center gap-1 pb-3 pr-6 text-lg tracking-widest"
+            class="btn-primary ml-[125px] flex flex-row-reverse items-end justify-center gap-2 pb-3 text-xl tracking-widest"
           >
             <a href="#">Download Extension</a>
             <svg
