--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 />
               </span>
               <br />
-              <span class="text-blue-800/30">applied automatically</span>
+              <span class="text-blue-800/30">applied automatically.</span>
             </h1>
           </div>
           <div class="mb-24 mt-24 flex items-center gap-14">
