--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 src="avater-default.png"
                 alt="#"
               />
-              <div class="">
+              <div>
                 <h3 class="text-xl font-semibold leading-6">
                   Wow, I saved $480!
                 </h3>
