rethink: container-border-width

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   </head>
   <body class="w-full bg-yellow-500/10">
     <header
-      class="sticky top-0 z-40 bg-slate-500/10 backdrop-blur-lg transition-colors duration-300"
+      class="sticky top-0 z-40 border-b border-dashed border-blue-600 bg-slate-500/10 backdrop-blur-lg transition-colors duration-300"
     >
-      <div
-        class="container border-b border-dashed border-blue-600  mx-auto flex h-20 items-center justify-between self-center px-8 xl:max-w-7xl"
+      <main
+        class="container mx-auto flex h-20 items-center justify-between self-center px-8 xl:max-w-7xl"
       >
         <!-- <img class="h-10" src="/logo.svg" alt="Couply" /> -->
         <div>
@@ -62,115 +62,117 @@
             />
           </svg>
         </a>
-      </div>
+      </main>
     </header>
     <!-- hero section begins -->
     <main class="h-[2000px] bg-blue-500/10 text-blue-800">
-      <section
-        class="container mx-auto flex border-b border-dashed border-blue-600 px-8 xl:max-w-7xl"
-      >
-        <article
-          class="flex-shrink-0 basis-3/5 border-r border-dashed border-r-blue-600"
-        >
-          <div>
-            <h1
-              class="mt-24 text-6xl font-semibold tracking-tighter text-blue-800"
-            >
-              Shoping with
-              <span class="relative font-black text-yellow-400"
-                >Coupons<img
-                  class="absolute -right-10 -top-12"
-                  src="sparks.svg"
-                  alt="sparks"
-                />
-              </span>
-              <br />
-              <span class="text-blue-800/30">applied automatically.</span>
-            </h1>
-          </div>
-          <div class="mb-24 mt-24 flex items-center gap-14">
-            <div class="flex flex-col gap-3">
-              <span class="text-base font-semibold tracking-widest"
-                >Used by over 5,00,000</span
+      <section class="border-b border-dashed border-blue-600">
+        <main class="container mx-auto flex px-8 xl:max-w-7xl">
+          <article
+            class="flex-shrink-0 basis-3/5 border-r border-dashed border-r-blue-600"
+          >
+            <div>
+              <h1
+                class="mt-24 text-6xl font-semibold tracking-tighter text-blue-800"
               >
-              <div class="-mb-1 -ml-1 flex -space-x-4">
-                <img class="avater-stacked" src="avater-1.jpg" alt="avater" />
-                <img class="avater-stacked" src="avater-2.jpg" alt="avater" />
-                <img class="avater-stacked" src="avater-3.jpg" alt="avater" />
-                <img class="avater-stacked" src="avater-4.jpg" alt="avater" />
-                <img class="avater-stacked" src="avater-5.jpg" alt="avater" />
-                <a href="#">
-                  <span
-                    class="avater-stacked flex items-center justify-center bg-yellow-400 text-base font-semibold"
-                    >+99</span
+                Shoping with
+                <span class="relative font-black text-yellow-400"
+                  >Coupons<img
+                    class="absolute -right-10 -top-12"
+                    src="sparks.svg"
+                    alt="sparks"
+                  />
+                </span>
+                <br />
+                <span class="text-blue-800/30">applied automatically.</span>
+              </h1>
+            </div>
+            <div class="mb-24 mt-24 flex items-center gap-14">
+              <div class="flex flex-col gap-3">
+                <span class="text-base font-semibold tracking-widest"
+                  >Used by over 5,00,000</span
+                >
+                <div class="-mb-1 -ml-1 flex -space-x-4">
+                  <img class="avater-stacked" src="avater-1.jpg" alt="avater" />
+                  <img class="avater-stacked" src="avater-2.jpg" alt="avater" />
+                  <img class="avater-stacked" src="avater-3.jpg" alt="avater" />
+                  <img class="avater-stacked" src="avater-4.jpg" alt="avater" />
+                  <img class="avater-stacked" src="avater-5.jpg" alt="avater" />
+                  <a href="#">
+                    <span
+                      class="avater-stacked flex items-center justify-center bg-yellow-400 text-base font-semibold"
+                      >+99</span
+                    >
+                  </a>
+                </div>
+              </div>
+              <div
+                class="mt-6 flex w-fit items-center gap-3 rounded-full bg-yellow-400/20 py-1 pl-1 pr-3 ring ring-blue-800/30 ring-offset-2"
+              >
+                <img
+                  class="w-16 rounded-full ring brightness-90 saturate-200 filter"
+                  src="avater-default.png"
+                  alt="#"
+                />
+                <div>
+                  <h3 class="text-xl font-semibold leading-6">
+                    Wow, I saved $480!
+                  </h3>
+                  <span class="text-sm uppercase leading-6 tracking-widest"
+                    >Danis Rechie</span
                   >
-                </a>
+                </div>
+              </div>
+            </div>
+          </article>
+          <article
+            class="mb-24 mt-24 flex flex-shrink-0 basis-2/5 flex-col justify-between"
+          >
+            <div class="flex w-fit flex-col gap-8 self-end text-xl font-light">
+              <div class="flex items-center gap-4">
+                <span class="counter">01</span>
+                <h4>
+                  Download the Extension for <br />
+                  Chrome or Firefox or Microsoft Edge.
+                </h4>
+              </div>
+              <div class="flex items-center gap-4">
+                <span class="counter">02</span>
+                <h4>Visit your favorite retailers.</h4>
+              </div>
+              <div class="flex items-center gap-4">
+                <span class="counter">03</span>
+                <h4>Save! Apply coupon from the toolbar.</h4>
               </div>
             </div>
             <div
-              class="mt-6 flex w-fit items-center gap-3 rounded-full bg-yellow-400/20 py-1 pl-1 pr-3 ring ring-blue-800/30 ring-offset-2"
+              class="btn-primary ml-[125px] flex flex-row-reverse items-end justify-center gap-2 pb-3 text-xl tracking-widest"
             >
-              <img
-                class="w-16 rounded-full ring brightness-90 saturate-200 filter"
-                src="avater-default.png"
-                alt="#"
-              />
-              <div>
-                <h3 class="text-xl font-semibold leading-6">
-                  Wow, I saved $480!
-                </h3>
-                <span class="text-sm uppercase leading-6 tracking-widest"
-                  >Danis Rechie</span
-                >
-              </div>
+              <a href="#">Download Extension</a>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+                fill="currentColor"
+                class="h-8 w-8"
+              >
+                <path
+                  fill-rule="evenodd"
+                  d="M9.75 6.75h-3a3 3 0 00-3 3v7.5a3 3 0 003 3h7.5a3 3 0 003-3v-7.5a3 3 0 00-3-3h-3V1.5a.75.75 0 00-1.5 0v5.25zm0 0h1.5v5.69l1.72-1.72a.75.75 0 111.06 1.06l-3 3a.75.75 0 01-1.06 0l-3-3a.75.75 0 111.06-1.06l1.72 1.72V6.75z"
+                  clip-rule="evenodd"
+                />
+                <path
+                  d="M7.151 21.75a2.999 2.999 0 002.599 1.5h7.5a3 3 0 003-3v-7.5c0-1.11-.603-2.08-1.5-2.599v7.099a4.5 4.5 0 01-4.5 4.5H7.151z"
+                />
+              </svg>
             </div>
-          </div>
-        </article>
-        <article
-          class="mb-24 mt-24 flex flex-shrink-0 basis-2/5 flex-col justify-between"
-        >
-          <div class="flex w-fit flex-col gap-8 self-end text-xl font-light">
-            <div class="flex items-center gap-4">
-              <span class="counter">01</span>
-              <h4>
-                Download the Extension for <br />
-                Chrome or Firefox or Microsoft Edge.
-              </h4>
-            </div>
-            <div class="flex items-center gap-4">
-              <span class="counter">02</span>
-              <h4>Visit your favorite retailers.</h4>
-            </div>
-            <div class="flex items-center gap-4">
-              <span class="counter">03</span>
-              <h4>Save! Apply coupon from the toolbar.</h4>
-            </div>
-          </div>
-          <div
-            class="btn-primary ml-[125px] flex flex-row-reverse items-end justify-center gap-2 pb-3 text-xl tracking-widest"
-          >
-            <a href="#">Download Extension</a>
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 24 24"
-              fill="currentColor"
-              class="h-8 w-8"
-            >
-              <path
-                fill-rule="evenodd"
-                d="M9.75 6.75h-3a3 3 0 00-3 3v7.5a3 3 0 003 3h7.5a3 3 0 003-3v-7.5a3 3 0 00-3-3h-3V1.5a.75.75 0 00-1.5 0v5.25zm0 0h1.5v5.69l1.72-1.72a.75.75 0 111.06 1.06l-3 3a.75.75 0 01-1.06 0l-3-3a.75.75 0 111.06-1.06l1.72 1.72V6.75z"
-                clip-rule="evenodd"
-              />
-              <path
-                d="M7.151 21.75a2.999 2.999 0 002.599 1.5h7.5a3 3 0 003-3v-7.5c0-1.11-.603-2.08-1.5-2.599v7.099a4.5 4.5 0 01-4.5 4.5H7.151z"
-              />
-            </svg>
-          </div>
-        </article>
+          </article>
+        </main>
       </section>
     </main>
     <!-- hero section ends -->
-    <footer class="flex h-40 items-center justify-center bg-yellow-300/10">
+    <footer
+      class="flex h-40 items-center justify-center border-t border-dashed border-blue-600 bg-yellow-300/10"
+    >
       <div class="container px-8 xl:max-w-7xl">
         <a
           class="btn-footer flex items-center justify-center gap-2 text-xl leading-6"
