added: brand-container

--- a/index.html
+++ b/index.html
@@ -168,6 +168,42 @@
           </article>
         </main>
       </section>
+      <section
+        class="h-52 border-b border-dashed border-blue-600 bg-yellow-300/5 backdrop-blur"
+      >
+        <main
+          class="container mx-auto flex h-full items-center justify-between xl:max-w-7xl"
+        >
+          <div class="brand-card px-14 pt-4">
+            <img
+              class="contrast-0 filter"
+              src="brand-amazon.png"
+              alt="amazon logo"
+            />
+          </div>
+          <div class="brand-card">
+            <img
+              class="contrast-0 filter"
+              src="brand-shopify.png"
+              alt="amazon logo"
+            />
+          </div>
+          <div class="brand-card">
+            <img
+              class="contrast-0 filter"
+              src="brand-walmart.png"
+              alt="amazon logo"
+            />
+          </div>
+          <div class="brand-card">
+            <img
+              class="h-16 contrast-0 filter"
+              src="brand-bestbuy.png"
+              alt="amazon logo"
+            />
+          </div>
+        </main>
+      </section>
     </main>
     <!-- hero section ends -->
     <footer
