--- a/index.html
+++ b/index.html
@@ -175,32 +175,16 @@
           class="container mx-auto flex h-full items-center justify-between xl:max-w-7xl"
         >
           <div class="brand-card px-14 pt-4">
-            <img
-              class="contrast-0 filter"
-              src="brand-amazon.png"
-              alt="amazon logo"
-            />
+            <img src="brand-amazon.svg" alt="amazon logo" />
           </div>
           <div class="brand-card">
-            <img
-              class="contrast-0 filter"
-              src="brand-shopify.png"
-              alt="amazon logo"
-            />
+            <img src="brand-shopify.svg" alt="shopify logo" />
           </div>
           <div class="brand-card">
-            <img
-              class="contrast-0 filter"
-              src="brand-walmart.png"
-              alt="amazon logo"
-            />
+            <img src="brand-walmart.svg" alt="walmart logo" />
           </div>
           <div class="brand-card">
-            <img
-              class="h-16 contrast-0 filter"
-              src="brand-bestbuy.png"
-              alt="amazon logo"
-            />
+            <img class="h-16" src="brand-bestbuy.svg" alt="bestbuy logo" />
           </div>
         </main>
       </section>
