--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         </main>
       </section>
       <section
-        class="h-52 border-b border-dashed border-blue-600 bg-yellow-300/5 backdrop-blur"
+        class="h-52 border-b border-dashed border-blue-600 bg-yellow-300/5"
       >
         <main
           class="container mx-auto flex h-full items-center justify-between xl:max-w-7xl"
