added: product section base

--- a/index.html
+++ b/index.html
@@ -168,6 +168,9 @@
           </article>
         </main>
       </section>
+
+      <!-- brand section begins -->
+
       <section
         class="h-52 border-b border-dashed border-blue-600 bg-yellow-300/5"
       >
@@ -188,8 +191,23 @@
           </div>
         </main>
       </section>
+
+      <!-- product section begins -->
+
+      <section>
+        <main class="container mx-auto px-8 xl:max-w-screen-xl">
+          <div><img src="product-1.jpg" alt="product" /></div>
+          <div><img src="product-2.jpg" alt="product" /></div>
+          <div><img src="product-3.jpg" alt="product" /></div>
+          <div><img src="product-4.jpg" alt="product" /></div>
+          <div><img src="product-5.jpg" alt="product" /></div>
+          <div><img src="product-6.jpg" alt="product" /></div>
+        </main>
+      </section>
     </main>
-    <!-- hero section ends -->
+
+    <!-- footer section begins -->
+
     <footer
       class="flex h-40 items-center justify-center border-t border-dashed border-blue-600 bg-yellow-300/10"
     >
