--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <title>DEV Server</title>
   </head>
   <body class="w-full bg-yellow-500/10">
+    <!-- header section begins -->
+
     <header
       class="sticky top-0 z-40 border-b border-dashed border-blue-600 bg-slate-500/10 backdrop-blur-lg transition-colors duration-300"
     >
       <main
         class="container mx-auto flex h-20 items-center justify-between self-center px-8 xl:max-w-7xl"
       >
-        <!-- <img class="h-10" src="/logo.svg" alt="Couply" /> -->
         <div>
           <svg
             class="h-10 w-full"
@@ -64,8 +65,10 @@
         </a>
       </main>
     </header>
-    <!-- hero section begins -->
-    <main class="h-[2000px] bg-blue-500/10 text-blue-800">
+
+    <main class="bg-blue-500/10 text-blue-800">
+      <!-- hero section begins -->
+
       <section class="border-b border-dashed border-blue-600">
         <main class="container mx-auto flex px-8 xl:max-w-7xl">
           <article
@@ -168,14 +171,13 @@
           </article>
         </main>
       </section>
-
       <!-- brand section begins -->
 
       <section
-        class="h-52 border-b border-dashed border-blue-600 bg-yellow-300/5"
+        class="h-64 border-b border-dashed border-blue-600 bg-yellow-300/5"
       >
         <main
-          class="container mx-auto flex h-full items-center justify-between xl:max-w-7xl"
+          class="container mx-auto flex h-full items-center justify-between px-8 xl:max-w-7xl"
         >
           <div class="brand-card px-14 pt-4">
             <img src="brand-amazon.svg" alt="amazon logo" />
@@ -193,7 +195,6 @@
       </section>
 
       <!-- product section begins -->
-
       <section>
         <main class="container mx-auto px-8 xl:max-w-screen-xl">
           <div><img src="product-1.jpg" alt="product" /></div>
@@ -207,7 +208,6 @@
     </main>
 
     <!-- footer section begins -->
-
     <footer
       class="flex h-40 items-center justify-center border-t border-dashed border-blue-600 bg-yellow-300/10"
     >
