--- a/index.html
+++ b/index.html
@@ -193,16 +193,30 @@
           </div>
         </main>
       </section>
-
       <!-- product section begins -->
+
       <section>
-        <main class="container mx-auto px-8 xl:max-w-screen-xl">
-          <div><img src="product-1.jpg" alt="product" /></div>
-          <div><img src="product-2.jpg" alt="product" /></div>
-          <div><img src="product-3.jpg" alt="product" /></div>
-          <div><img src="product-4.jpg" alt="product" /></div>
-          <div><img src="product-5.jpg" alt="product" /></div>
-          <div><img src="product-6.jpg" alt="product" /></div>
+        <main
+          class="container mx-auto grid-cols-3 grid-rows-2 px-8 xl:max-w-screen-xl"
+        >
+          <div class="product-card">
+            <img src="product-1.jpg" alt="product" />
+          </div>
+          <div class="product-card">
+            <img src="product-2.jpg" alt="product" />
+          </div>
+          <div class="product-card">
+            <img src="product-3.jpg" alt="product" />
+          </div>
+          <div class="product-card">
+            <img src="product-4.jpg" alt="product" />
+          </div>
+          <div class="product-card">
+            <img src="product-5.jpg" alt="product" />
+          </div>
+          <div class="product-card">
+            <img src="product-6.jpg" alt="product" />
+          </div>
         </main>
       </section>
     </main>
