removed: grid layout

--- a/index.html
+++ b/index.html
@@ -198,27 +198,8 @@
       <!-- product section begins -->
 
       <section>
-        <main
-          class="container mx-auto grid-cols-3 grid-rows-2 px-8 xl:max-w-screen-xl"
-        >
-          <div class="product-card">
-            <img src="product-1.jpg" alt="product" />
-          </div>
-          <div class="product-card">
-            <img src="product-2.jpg" alt="product" />
-          </div>
-          <div class="product-card">
-            <img src="product-3.jpg" alt="product" />
-          </div>
-          <div class="product-card">
-            <img src="product-4.jpg" alt="product" />
-          </div>
-          <div class="product-card">
-            <img src="product-5.jpg" alt="product" />
-          </div>
-          <div class="product-card">
-            <img src="product-6.jpg" alt="product" />
-          </div>
+        <main>
+          
         </main>
       </section>
     </main>
