--- a/index.html
+++ b/index.html
@@ -198,8 +198,51 @@
       <!-- product section begins -->
 
       <section>
-        <main>
-          
+        <main
+          class="container mx-auto grid grid-cols-3 gap-4 px-8 xl:max-w-screen-xl"
+        >
+          <div class="rounded-lg border border-dashed border-blue-600">
+            <img
+              src="product-1.jpg"
+              alt="product"
+              class="h-auto max-w-full rounded-lg"
+            />
+          </div>
+          <div class="rounded-lg border border-dashed border-blue-600">
+            <img
+              src="product-2.jpg"
+              alt="product"
+              class="h-auto max-w-full rounded-lg"
+            />
+          </div>
+          <div class="rounded-lg border border-dashed border-blue-600">
+            <img
+              src="product-3.jpg"
+              alt="product"
+              class="h-auto max-w-full rounded-lg"
+            />
+          </div>
+          <div class="rounded-lg border border-dashed border-blue-600">
+            <img
+              src="product-4.jpg"
+              alt="product"
+              class="h-auto max-w-full rounded-lg"
+            />
+          </div>
+          <div class="rounded-lg border border-dashed border-blue-600">
+            <img
+              src="product-5.jpg"
+              alt="product"
+              class="h-auto max-w-full rounded-lg"
+            />
+          </div>
+          <div class="rounded-lg border border-dashed border-blue-600">
+            <img
+              src="product-6.jpg"
+              alt="product"
+              class="h-auto max-w-full rounded-lg"
+            />
+          </div>
         </main>
       </section>
     </main>
