--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html class="scroll-smooth" lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/couply.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DEV Server</title>
   </head>
@@ -13,9 +13,10 @@
       class="sticky top-0 z-40 border-b border-dashed border-blue-600 bg-slate-500/10 backdrop-blur-lg transition-colors duration-300"
     >
       <main
-        class="container mx-auto flex h-20 items-center justify-between self-center px-8 xl:max-w-7xl"
+        class="container mx-auto flex h-14 items-center justify-between self-center px-6 md:h-16 md:px-6 xl:max-w-7xl"
       >
-        <div>
+        <!-- mobileNav: 56px; desktopNav: 64px -->
+        <div class="flex gap-1 md:gap-2">
           <svg
             class="h-10 w-full"
             width="53"
@@ -33,8 +34,12 @@
               fill="#1e40af"
             />
           </svg>
+          <span
+            class="self-start font-serif text-4xl font-semibold tracking-tighter text-blue-800"
+            >Couply</span
+          >
         </div>
-        <nav>
+        <nav class="hidden md:block">
           <ul
             class="duration-30 flex items-center gap-5 text-base font-medium uppercase tracking-wider text-blue-800 transition-colors lg:gap-8"
           >
@@ -46,7 +51,7 @@
             <li class="hover:text-yellow-500"><a href="#">Contact</a></li>
           </ul>
         </nav>
-        <a class="btn-primary flex gap-2 leading-6" href="#">
+        <a class="btn-primary hidden gap-2 leading-6 md:flex" href="#">
           Start Saving
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -63,6 +68,24 @@
             />
           </svg>
         </a>
+        <!-- mobile nav begins -->
+
+        <div class="md:hidden">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+            class="h-8 w-8 fill-yellow-400 stroke-blue-800 hover:fill-blue-300"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M3.75 12h16.5m-16.5 3.75h16.5M3.75 19.5h16.5M5.625 4.5h12.75a1.875 1.875 0 010 3.75H5.625a1.875 1.875 0 010-3.75z"
+            />
+          </svg>
+        </div>
       </main>
     </header>
 
@@ -70,28 +93,35 @@
       <!-- hero section begins -->
 
       <section class="border-b border-dashed border-blue-600">
-        <main class="container mx-auto flex px-8 xl:max-w-7xl">
+        <main
+          class="container mx-auto flex flex-col px-6 md:flex-row xl:max-w-7xl"
+        >
           <article
-            class="flex-shrink-0 basis-3/5 border-r border-dashed border-r-blue-600"
+            class="flex-shrink-0 basis-3/5 border-dashed border-r-blue-600 md:border-r"
           >
             <div>
               <h1
-                class="mt-24 text-6xl font-semibold tracking-tighter text-blue-800"
+                class="pt-24 text-center text-6xl font-semibold tracking-tighter text-blue-800 sm:text-5xl sm:leading-6 md:pt-24 md:text-left md:text-6xl"
               >
                 Shoping with
                 <span class="relative font-black text-yellow-400"
                   >Coupons<img
-                    class="absolute -right-10 -top-12"
-                    src="sparks.svg"
+                    class="absolute -right-10 -top-10 -z-10 h-auto w-20 sm:-top-12 sm:w-fit"
+                    src="sparkles.svg"
                     alt="sparks"
                   />
                 </span>
                 <br />
-                <span class="text-blue-800/30">applied automatically.</span>
+                <span
+                  class="text-3xl tracking-tight text-blue-800/30 sm:text-4xl md:text-6xl"
+                  >applied automatically.</span
+                >
               </h1>
             </div>
-            <div class="mb-24 mt-24 flex items-center gap-14">
-              <div class="flex flex-col gap-3">
+            <div
+              class="flex flex-col items-center gap-3 border-b border-dashed border-blue-600 py-24 md:flex-row md:gap-8 md:border-none"
+            >
+              <div class="flex flex-col items-center gap-3 md:items-start">
                 <span class="text-base font-semibold tracking-widest"
                   >Used by over 5,00,000</span
                 >
@@ -110,7 +140,7 @@
                 </div>
               </div>
               <div
-                class="mt-6 flex w-fit items-center gap-3 rounded-full bg-yellow-400/20 py-1 pl-1 pr-3 ring ring-blue-800/30 ring-offset-2"
+                class="mx-auto mt-6 flex w-fit items-center gap-3 rounded-full bg-yellow-400/20 py-1 pl-1 pr-3 ring ring-blue-800/30 ring-offset-2 md:mx-0"
               >
                 <img
                   class="w-16 rounded-full ring brightness-90 saturate-200 filter"
@@ -129,9 +159,11 @@
             </div>
           </article>
           <article
-            class="mb-24 mt-24 flex flex-shrink-0 basis-2/5 flex-col justify-between"
+            class="flex basis-2/5 flex-col justify-between gap-24 py-24 md:gap-0"
           >
-            <div class="flex w-fit flex-col gap-8 self-end text-xl font-light">
+            <div
+              class="flex w-fit flex-col gap-8 self-center text-xl font-light md:self-end"
+            >
               <div class="flex items-center gap-4">
                 <span class="counter">01</span>
                 <h4>
@@ -149,11 +181,8 @@
               </div>
             </div>
             <div
-              class="btn-primary ml-[125px] flex flex-row-reverse items-end justify-center gap-2 pb-3 text-xl tracking-widest"
+              class="btn-primary mx-auto flex max-w-[360px] items-end justify-center gap-2 pb-3 text-xl tracking-widest md:mr-0"
             >
-              <a href="https://github.com/saeidex/Couply-Reshaped"
-                >Download Extension</a
-              >
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 viewBox="0 0 24 24"
@@ -169,6 +198,11 @@
                   d="M7.151 21.75a2.999 2.999 0 002.599 1.5h7.5a3 3 0 003-3v-7.5c0-1.11-.603-2.08-1.5-2.599v7.099a4.5 4.5 0 01-4.5 4.5H7.151z"
                 />
               </svg>
+              <a
+                href="https://github.com/saeidex/Couply-Reshaped"
+                target="_blank"
+                >Download Extension</a
+              >
             </div>
           </article>
         </main>
@@ -179,7 +213,7 @@
         class="h-64 border-b border-dashed border-blue-600 bg-yellow-300/5"
       >
         <main
-          class="container mx-auto flex h-full items-center justify-between px-8 xl:max-w-7xl"
+          class="container mx-auto flex h-full flex-wrap items-center justify-between px-6 xl:max-w-7xl"
         >
           <div class="brand-card px-14 pt-4">
             <img src="brand-amazon.svg" alt="amazon logo" />
@@ -199,9 +233,11 @@
 
       <section>
         <main
-          class="container mx-auto grid grid-cols-3 gap-4 px-8 xl:max-w-screen-xl"
+          class="container mx-auto grid grid-cols-3 gap-4 px-6 xl:max-w-screen-xl"
         >
-          <div class="rounded-lg border border-dashed border-blue-600">
+          <div
+            class="rounded-lg border border-dashed border-blue-600 shadow-blue-600 hover:border-none hover:shadow-xl"
+          >
             <img
               src="product-1.jpg"
               alt="product"
@@ -251,7 +287,7 @@
     <footer
       class="flex h-20 items-center justify-center border-t border-dashed border-blue-600 bg-yellow-300/10"
     >
-      <div class="container flex items-center justify-center px-8 xl:max-w-7xl">
+      <div class="container flex items-center justify-center px-6 xl:max-w-7xl">
         <span class="text-base font-bold tracking-tighter text-yellow-400"
           >~saeidex~</span
         >
