--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         class="container mx-auto flex h-14 items-center justify-between self-center px-6 md:h-16 md:px-6 xl:max-w-7xl"
       >
         <!-- mobileNav: 56px; desktopNav: 64px -->
-        <div class="flex gap-1 md:gap-2">
+        <div class="flex items-center gap-1 md:gap-2">
           <svg
-            class="h-10 w-full"
+            class="h-7 w-full md:h-10"
             width="53"
             height="68"
             viewBox="0 0 53 68"
@@ -35,7 +35,7 @@
             />
           </svg>
           <span
-            class="self-start font-serif text-4xl font-semibold tracking-tighter text-blue-800"
+            class="self-start font-serif text-2xl font-semibold tracking-tighter text-blue-800 transition-colors duration-300 hover:text-yellow-400 md:text-4xl"
             >Couply</span
           >
         </div>
@@ -77,7 +77,7 @@
             viewBox="0 0 24 24"
             stroke-width="1.5"
             stroke="currentColor"
-            class="h-8 w-8 fill-yellow-400 stroke-blue-800 hover:fill-blue-300"
+            class="h-8 w-8 fill-yellow-400 stroke-blue-800 transition-colors duration-300 hover:fill-blue-300"
           >
             <path
               stroke-linecap="round"
@@ -101,7 +101,7 @@
           >
             <div>
               <h1
-                class="pt-24 text-center text-6xl font-semibold tracking-tighter text-blue-800 sm:text-5xl sm:leading-6 md:pt-24 md:text-left md:text-6xl"
+                class="pt-16 text-center text-6xl font-semibold tracking-tighter text-blue-800 sm:text-5xl sm:leading-6 md:pt-24 md:text-left md:text-6xl"
               >
                 Shoping with
                 <span class="relative font-black text-yellow-400"
@@ -119,7 +119,7 @@
               </h1>
             </div>
             <div
-              class="flex flex-col items-center gap-3 border-b border-dashed border-blue-600 py-24 md:flex-row md:gap-8 md:border-none"
+              class="flex flex-col items-center gap-3 border-b border-dashed border-blue-600 py-16 md:flex-row md:gap-8 md:border-none md:py-24"
             >
               <div class="flex flex-col items-center gap-3 md:items-start">
                 <span class="text-base font-semibold tracking-widest"
